# FinTrack

./: .gitignore  CLAUDE.md  HANDOFF.txt  LICENSE  Project Plan FinTrack.txt  Project folder structure.txt  README.md  alembic.ini  install-fintrack.sh  pyproject.toml  requirements-dev.txt  requirements-minimal.txt  requirements-ml.txt  requirements-packaging.txt  requirements.txt  sidecar.spec
.claude/: ARCHITECTURE.md  DECISIONS.md  PROGRESS.md
ml/: __init__.py  accuracy.py  correlation.py  forecast.py  jobs.py  persistence.py  sentiment.py  volatility.py
ml_models/: train_all.py
scripts/: deploy_ml_service.py  fetch_real_data.py  train_test_models.py
shell/: eslint.config.js  index.html  package.json  pnpm-lock.yaml
sidecar/: config.py  main.py
tests/: conftest.py  test_alerts_service.py  test_api_alerts.py  test_api_analytics.py  test_api_assets.py  test_api_config.py  test_api_forecast.py  test_api_macro.py  test_api_news.py  test_api_portfolio.py  test_api_prices.py  test_api_quotes.py  test_api_watchlists.py  test_assets_service.py  test_auth.py  test_coingecko_fetcher.py  test_fred_fetcher.py  test_health.py  test_ingest_crypto.py  test_ingest_macro.py  test_ingest_news.py  test_ingest_prices.py  test_migration_0014_repair.py  test_migrations.py  test_ml_accuracy.py  test_ml_correlation.py  test_ml_forecast.py  test_ml_jobs.py  test_ml_persistence.py  test_ml_sentiment.py  test_ml_sentiment_jobs.py  test_ml_volatility.py  test_portfolio_service.py  test_quotes_service.py  test_rss_fetcher.py  test_scheduler_reconfigure.py  test_seed.py  (+3 more)
(+115 files in other folders)
