[project]
name = "fintrack-sidecar"
version = "0.2.0"
description = "FinTrack desktop app Python sidecar (FastAPI + SQLite + APScheduler)"
requires-python = ">=3.11"
readme = "README.md"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".venv", "shell", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
exclude = ["^\\.venv/", "^shell/", "^build/", "^dist/"]

[[tool.mypy.overrides]]
module = ["yfinance.*", "feedparser.*", "apscheduler.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"
